[gd_scene load_steps=10 format=3 uid="uid://c03c4v2tl3txm"]

[ext_resource type="Script" uid="uid://b7ig7gp61267f" path="res://Assets/Scripts/enemy/enemy_logic.gd" id="1_4ye20"]
[ext_resource type="Texture2D" uid="uid://b28vfmiussnvf" path="res://Assets/Sprites/enemy_1.png" id="1_atlr2"]
[ext_resource type="Script" uid="uid://cdb4435px6fpj" path="res://Assets/Scripts/enemy/enemy_animator.gd" id="2_4870b"]
[ext_resource type="PackedScene" uid="uid://ccqi8dx82bsrx" path="res://Assets/Scenes/weapon_rifle.tscn" id="2_e2b7p"]

[sub_resource type="Animation" id="Animation_2g0jp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 40, 40)]
}

[sub_resource type="Animation" id="Animation_e2b7p"]
resource_name = "idle"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 40, 40), Rect2(40, 0, 40, 40), Rect2(80, 0, 40, 40), Rect2(120, 0, 40, 40), Rect2(160, 0, 40, 40)]
}

[sub_resource type="Animation" id="Animation_atlr2"]
resource_name = "movement"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 40, 40, 40), Rect2(40, 40, 40, 40), Rect2(80, 40, 40, 40), Rect2(120, 40, 40, 40), Rect2(80, 40, 40, 40), Rect2(40, 40, 40, 40), Rect2(0, 40, 40, 40)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ye20"]
_data = {
&"RESET": SubResource("Animation_2g0jp"),
&"idle": SubResource("Animation_e2b7p"),
&"movement": SubResource("Animation_atlr2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2g0jp"]
size = Vector2(20, 32)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 768
script = ExtResource("1_4ye20")

[node name="EnemyAnimator" type="Node2D" parent="."]
script = ExtResource("2_4870b")

[node name="Sprite2D" type="Sprite2D" parent="EnemyAnimator"]
texture = ExtResource("1_atlr2")
offset = Vector2(0, -16)
region_enabled = true
region_rect = Rect2(0, 0, 40, 40)

[node name="AnimationEnemy" type="AnimationPlayer" parent="EnemyAnimator"]
libraries = {
&"": SubResource("AnimationLibrary_4ye20")
}
autoplay = "idle"

[node name="weapon_rifle" parent="EnemyAnimator" instance=ExtResource("2_e2b7p")]
position = Vector2(-4, -8.5)

[node name="RightRayCast" type="RayCast2D" parent="."]
target_position = Vector2(20, 30)
collision_mask = 768

[node name="LeftRayCast" type="RayCast2D" parent="."]
target_position = Vector2(-20, 30)
collision_mask = 768

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_2g0jp")
